--- a/.linthtmlrc.json
+++ b/.linthtmlrc.json
@@ -20,9 +20,7 @@
 	"spec-char-escape": true,
 	"text-ignore-regex": false,
 	"tag-bans": [
-		"style",
-		"b",
-		"i"
+		"style"
 	],
 	"tag-close": true,
 	"tag-name-lowercase": true,
@@ -41,7 +39,7 @@
 	"attr-validate": true,
 	"id-no-dup": true,
 	"id-class-no-ad": true,
-	"id-class-style": "underscore",
+	"id-class-style": "dash",
 	"class-no-dup": true,
 	"class-style": false,
 	"id-class-ignore-regex": false,
